# ga_progression_modeling

./: .gitignore  README.md  create_ir_vs_af_ppt.py  pyproject.toml
src/: main.py
src/bash_scripts/: generate_ppt.sh  make_heatmap.sh  pipeline_compare_segs.sh  pipeline_gompertz.sh  pipeline_seg_reg.sh
src/configs/: config.yaml  meei.yaml  nv_patients.yaml  proteomics.yaml  stargardts.yaml
src/dist2centroid/: create_plot.py
src/growth_model/: make_dataset.py  train.py  utils.py
src/guis/: run_gui.py
src/interpatient_registration/: create_retina_atlas.py  interpatient_registration.py  make_heatmap.py
src/legacy/: global_growth.py  pareto_chart.py
src/legacy/bash_scripts/: generate_ppt.sh  mount_slce.sh  pipeline_compare_segs.sh  pipeline_gompertz.sh  pipeline_seg_reg.sh
src/legacy/ga_interactive_app/: app.py
src/legacy/ga_interactive_app/legacy/: interactive_app.py
src/legacy/utils/: add_reg_columns.py  area_comparison.py  change_filepaths.py  dilate_vessels.py  j2k2png.py  merge_metadata.py  register.py
src/pipeline_scripts/: 0_get_af_metadata.py  1_get_modality_data.py  2_segment_ga.py  3_segment_vessels.py  4_merge_datasets.py  5_compute_ga_area.py  6_register_images.py  7_create_ppt_sequential.py  8_create_ppt_longitudinal.py
src/ppt_generators/: compare_ga_segs.py  create_ga_segs_ppt.py  create_growth_curves_ppt.py  create_growth_curves_ppt_v2.py  create_ir_vs_af_ppt.py  create_ppt_view2.py
src/scratch_files/: compare_data.py  coris_stats.py  get_affine_from_tps.py  get_data.py  inspect_data.py  interpat_reg.py  make_sourav_dataset.py
src/utils/: add_seg_columns.py  area_comparison.py  change_filepaths.py  draw_contours.py  get_modality_data.py  merge_metadata.py  register.py
